<resources>
    <string name="app_name">MADProject</string>
    <string name="login">LOGIN</string>
    <string name="marks_details">Marks Details</string>
    <string name="student_name_">Student Name</string>
    <string name="enrollment_number_">Enrollment Number</string>
    <string name="class_">Class</string>
    <string name="marks_">Marks</string>
    <string name="gpa_">GPA</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="do_you_have_and_account">Do you have and Account?</string>
    <string name="add_marks_">Add Marks</string>
    <string name="string_add_marks" />
    <string name="string_string_add_marks" />
    <string name="student_name">Student Name</string>
    <string name="enrollment_number">Enrollment Number</string>
    <string name="class_1">Class</string>
    <string name="marks">Marks</string>
    <string name="gpa">GPA</string>
    <string name="add">Add</string>
    <string name="add_marks">Add Marks</string>
    <string name="singup">Sing UP</string>
    <string name="email">Email</string>
    <string name="not_registered">Not Registered ?</string>
    <string name="do_you_have_an_account">Do you have an account ?</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="profile">Profile</string>
    <string name="classmanage">Class Routine</string>
    <string name="students">Students</string>
    <string name="results">Results</string>
    <string name="tutes">Tutes</string>
    <string name="report">Reports</string>
    <string name="fogot">Forgot Password ?</string>
    <string name="pro">User Profile</string>
    <string name="updatepro">Update Profile</string>
    <string name="removepro">Remove Profile</string>
    <string name="viewpro">View Profile</string>
    <string name="class1">Class 1</string>
    <string name="class2">Class 2</string>
    <string name="class3">Class 3</string>
    <string name="forg">Forgot your password ?</string>
    <string name="dis">Enter your email address to reset your password.</string>
    <string name="re">Reset Password</string>

</resources>
