<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileMain"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/profile"
        android:textSize="40dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button22"
        android:layout_width="215dp"
        android:layout_height="75dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button"
        android:text="@string/updatepro"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button23"
        android:layout_width="217dp"
        android:layout_height="78dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button22"
        android:layout_marginBottom="134dp"
        android:background="@drawable/button"
        android:text="@string/removepro"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button24"
        android:layout_width="217dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button22"
        android:layout_marginTop="140dp"
        android:background="@drawable/button"
        android:text="@string/viewpro"
        android:textSize="20dp"
        android:textStyle="bold" />

</RelativeLayout>