<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard"
    android:background="@drawable/background">


    <Button
        android:id="@+id/button15"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/profile"/>

    <Button
        android:id="@+id/button16"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/button15"
        android:layout_marginEnd="30dp"
        android:background="@drawable/calendar"/>

    <Button
        android:id="@+id/button17"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button15"
        android:layout_marginTop="197dp"
        android:background="@drawable/student"/>

    <Button
        android:id="@+id/button18"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignStart="@+id/button16"
        android:layout_alignTop="@+id/button17"
        android:background="@drawable/results"/>

    <Button
        android:id="@+id/button19"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button15"
        android:layout_marginBottom="66dp"
        android:background="@drawable/tutes"/>

    <Button
        android:id="@+id/button20"
        android:layout_width="125dp"
        android:layout_height="120dp"
        android:layout_alignStart="@+id/button16"
        android:layout_alignTop="@+id/button19"
        android:background="@drawable/reports"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="150dp"
        android:text="@string/profile"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/button16"
        android:layout_alignTop="@+id/textView10"
        android:text="@string/classmanage"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView10"
        android:layout_marginBottom="217dp"
        android:text="@string/students"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView12"
        android:layout_marginEnd="55dp"
        android:text="@string/results"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView10"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:text="@string/tutes"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView13"
        android:layout_alignTop="@+id/textView14"
        android:text="@string/report"
        android:textSize="20dp"
        android:textStyle="bold"/>

</RelativeLayout>